--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,21 +4,19 @@ security:
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        api:
+            id: VysokeSkoly\ImageApi\Service\Security\ApiKeyUserProvider
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+            stateless: true
 
-        main:
-            anonymous: ~
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+        api:
+            pattern: ^/
+            stateless: true
+            simple_preauth:
+                authenticator: VysokeSkoly\ImageApi\Service\Security\ApiKeyAuthenticator
+            provider: api
