--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,3 +4,5 @@
 parameters:
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+
+    api_key: default_api_key
