--- a/src/ImageApi/Resources/config/services-facades.yml
+++ b/src/ImageApi/Resources/config/services-facades.yml
@@ -4,4 +4,6 @@ services:
         autoconfigure: true
         public: true
 
-    VysokeSkoly\ImageApi\Facade\StorageFacade: ~
+    VysokeSkoly\ImageApi\Facade\StorageFacade:
+        arguments:
+            $storagePath: '%storage_path%'
