--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,13 @@
         "symfony/polyfill-apcu": "^1.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
-        "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.6.3",
         "friendsofphp/php-cs-fixer": "^2.1",
-        "squizlabs/php_codesniffer": "^2.8"
+        "phpstan/phpstan": "^0.6.3",
+        "phpunit/phpunit": "^6.0",
+        "satooshi/php-coveralls": "^1.0",
+        "sensio/generator-bundle": "^3.0",
+        "squizlabs/php_codesniffer": "^2.8",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
