--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "vysokeskoly/image-api",
     "license": "proprietary",
     "type": "project",
+    "version": "1.1.0",
     "autoload": {
         "psr-4": {
             "VysokeSkoly\\ImageApi\\": "src/ImageApi"
