--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
         "mockery/mockery": "^0.9.9",
+        "php-mock/php-mock-mockery": "^1.1",
         "phpstan/phpstan": "^0.6.3",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
