--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "vysokeskoly/image-api",
+    "description": "Image Api as Storage for images",
     "license": "proprietary",
     "type": "project",
     "version": "1.3.0",
@@ -27,11 +28,12 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/generator-bundle": "^3.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
-        "sensio/generator-bundle": "^3.0"
+        "vysokeskoly/deb-build": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
@@ -43,6 +45,12 @@
         "squizlabs/php_codesniffer": "^2.8",
         "symfony/phpunit-bridge": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://satis.vysokeskoly.cz/"
+        }
+    ],
     "scripts": {
         "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -73,7 +81,8 @@
         ]
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "secure-http": false
     },
     "extra": {
         "symfony-app-dir": "app",
