--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,16 @@
     },
     "require": {
         "php": ">=7.1",
-        "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0",
+        "beberlei/assert": "^2.7",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0"
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/symfony": "3.3.*",
+        "twig/twig": "^1.0||^2.0",
+        "sensio/generator-bundle": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
@@ -38,7 +40,6 @@
         "phpstan/phpstan": "^0.6.3",
         "phpunit/phpunit": "^6.0",
         "satooshi/php-coveralls": "^1.0",
-        "sensio/generator-bundle": "^3.0",
         "squizlabs/php_codesniffer": "^2.8",
         "symfony/phpunit-bridge": "^3.0"
     },
