Add namespace parameter to allow subdirs in storage

--- a/src/ImageApi/Resources/config/services.yml
+++ b/src/ImageApi/Resources/config/services.yml
@@ -3,3 +3,17 @@ services:
         autowire: true
         autoconfigure: true
         public: false
+        bind:
+            $storagePath: '%storage_path%'
+            $defaultNamespace: '%default_namespace%'
+            $isDebug: "%kernel.debug%"
+            $apiKey: "%api_key%"
+
+    VysokeSkoly\ImageApi\:
+        resource: '../../{Facade,Service}'
+
+    # controllers are imported separately to make sure services can be injected
+    # as action arguments even if you don't extend any base controller class
+    VysokeSkoly\ImageApi\Controller\:
+        resource: '../../Controller'
+        tags: ['controller.service_arguments']
