--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,8 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0",
-        "vysokeskoly/deb-build": "^3.0"
+        "symfony/symfony": "^3.4",
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
@@ -60,7 +59,7 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ],
-        "test": [
+        "all": [
             "@cs",
             "@phpunit",
             "@phpstan"
@@ -75,9 +74,6 @@
         ]
     },
     "config": {
-        "platform": {
-            "php": "7.1.13"
-        },
         "sort-packages": true
     },
     "extra": {
