--- a/composer.json
+++ b/composer.json
@@ -61,10 +61,15 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-install-cmd": [
+            "@installTools",
             "@symfony-scripts"
         ],
         "post-update-cmd": [
+            "@installTools",
             "@symfony-scripts"
+        ],
+        "installTools": [
+            "cd tools/pre-build && composer install && composer link"
         ],
         "all": [
             "@cs",
