Add list command

--- a/src/ImageApi/Resources/config/services.yml
+++ b/src/ImageApi/Resources/config/services.yml
@@ -10,7 +10,7 @@ services:
             $apiKey: "%api_key%"
 
     VysokeSkoly\ImageApi\:
-        resource: '../../{Facade,Service}'
+        resource: '../../{Command,Facade,Service}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
