--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 php:
-    - '7.1'
+    - '7.3'
 
 install:
     - composer install
@@ -9,7 +9,7 @@ before-script:
     - mkdir -p code-coverage
 
 script:
-    - composer test
+    - composer all
 
 after_success:
     - travis_retry php vendor/bin/coveralls -v
