--- a/composer.json
+++ b/composer.json
@@ -6,86 +6,113 @@
     "version": "1.3.0",
     "autoload": {
         "psr-4": {
-            "VysokeSkoly\\ImageApi\\": "src/ImageApi"
-        },
-        "classmap": [
-            "app/AppKernel.php",
-            "app/AppCache.php"
-        ]
+            "VysokeSkoly\\ImageApi\\": "src"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "VysokeSkoly\\Tests\\ImageApi\\": "tests"
-        },
-        "files": [
-            "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
-        ]
+            "VysokeSkoly\\ImageApi\\": "tests"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*"
     },
     "require": {
-        "php": ">=7.3",
-        "beberlei/assert": "^2.7",
-        "doctrine/orm": "^2.5",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "^3.4",
-        "twig/twig": "^1.0||^2.0"
+        "php": "^7.4",
+        "beberlei/assert": "^3.2",
+        "doctrine/annotations": "^1.13",
+        "symfony/asset": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/expression-language": "5.2.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/form": "5.2.*",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
+        "symfony/intl": "5.2.*",
+        "symfony/mailer": "5.2.*",
+        "symfony/mime": "5.2.*",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/notifier": "5.2.*",
+        "symfony/process": "5.2.*",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
+        "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
+        "symfony/serializer": "5.2.*",
+        "symfony/stopwatch": "^5.2",
+        "symfony/string": "5.2.*",
+        "symfony/translation": "5.2.*",
+        "symfony/twig-bundle": "^5.2",
+        "symfony/validator": "5.2.*",
+        "symfony/web-link": "5.2.*",
+        "symfony/web-profiler-bundle": "^5.2",
+        "symfony/yaml": "5.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1",
-        "mockery/mockery": "^0.9.9",
-        "php-mock/php-mock-mockery": "^1.1",
-        "phpstan/phpstan": "^0.6.3",
-        "phpunit/phpunit": "^6.0",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "^2.8",
-        "symfony/phpunit-bridge": "^3.0"
+        "mockery/mockery": "^1.4",
+        "php-mock/php-mock-mockery": "^1.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^0.12.88",
+        "phpstan/phpstan-beberlei-assert": "^0.12.6",
+        "phpstan/phpstan-mockery": "^0.12.13",
+        "phpstan/phpstan-phpunit": "^0.12.19",
+        "phpunit/phpunit": "^9.5"
     },
     "scripts": {
-        "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
-            "@symfony-scripts"
+            "@installTools",
+            "@auto-scripts"
         ],
         "post-update-cmd": [
-            "@symfony-scripts"
+            "@updateTools",
+            "@auto-scripts"
         ],
         "all": [
+            "@analyze",
+            "@test"
+        ],
+        "analyze": [
             "@cs",
-            "@phpunit",
             "@phpstan"
         ],
-        "phpstan": "vendor/bin/phpstan analyse -l 5 -c phpstan.neon app src tests",
-        "phpunit": "php -dxdebug.coverage_enable=1 vendor/bin/phpunit --configuration phpunit.xml.dist tests",
-        "cs": "vendor/bin/phpcs --standard=ruleset.xml .",
+        "installTools": [
+            "cd tools/coding-standards && composer install && composer link"
+        ],
+        "updateTools": [
+            "cd tools/coding-standards && composer update && composer link"
+        ],
+        "test": "bin/phpunit -c phpunit.xml.dist",
+        "tests-ci": "mkdir -p code-coverage && php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
+        "phpstan": "bin/phpstan analyze -l 7 -c phpstan.neon src tests",
         "fix": [
-            "vendor/bin/php-cs-fixer fix src",
-            "vendor/bin/php-cs-fixer fix tests",
-            "vendor/bin/phpcbf --standard=ruleset.xml ."
-        ]
+            "bin/ecs check --ansi --clear-cache --fix -- src/ tests/ ecs.php"
+        ],
+        "cs": "bin/ecs check --ansi -- src/ tests/ ecs.php"
     },
     "config": {
+        "bin-dir": "bin",
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
         "sort-packages": true
     },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
     "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
-        },
-        "branch-alias": null
+        "symfony": {
+            "allow-contrib": false,
+            "require": "5.2.*"
+        }
     }
 }
