--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,9 @@
 parameters:
+    checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
+
+    excludes_analyse:
+        - src/Kernel.php
+
     ignoreErrors:
-        - '#.*Mockery.*#'
+        - '#Cannot cast array<string>\|string\|null to string.#'
