--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,49 +2,51 @@
 
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit
-        backupGlobals="false"
-        backupStaticAttributes="false"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
         colors="true"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true"
-        processIsolation="false"
-        stopOnFailure="false"
-        syntaxCheck="false"
         bootstrap="vendor/autoload.php">
 
     <testsuites>
         <testsuite name="VysokeSkoly/Image Api Test Suite">
-            <directory>./tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
-    <filter>
-        <whitelist>
-            <directory>src</directory>
-            <exclude>
-                <directory>src/*/Controller</directory>
-                <directory>src/*/DependencyInjection</directory>
-                <directory>src/*/Resources</directory>
-                <directory>src/*/*/Security</directory>
-                <directory suffix="ImageApi.php">src/*</directory>
-            </exclude>
-        </whitelist>
-    </filter>
+    <coverage processUncoveredFiles="true">
+        <include>
+            <directory suffix=".php">src</directory>
+        </include>
+        <exclude>
+            <directory>src/Command</directory>
+            <directory>src/Controller</directory>
+            <directory>src/*/Security</directory>
+            <file>src/Kernel.php</file>
+        </exclude>
+        <report>
+            <clover outputFile="./code-coverage/clover.xml"/>
+            <html outputDirectory="./code-coverage" highLowerBound="90"/>
+        </report>
+    </coverage>
 
     <logging>
-        <log type="coverage-html" target="./code-coverage" title="VysokeSkoly/Image Api"
-             charset="UTF-8" yui="true" highlight="true"
-             lowUpperBound="35" highLowerBound="90"/>
-
-        <log type="coverage-clover" target="./code-coverage/clover.xml"/>
-        <log type="junit" target="./code-coverage/junit.xml" logIncompleteSkipped="false"/>
+        <junit outputFile="./code-coverage/junit.xml"/>
     </logging>
 
     <php>
         <!-- E_ALL = 30719 -->
         <ini name="error_reporting" value="30719"/>
-        <server name="KERNEL_CLASS" value="AppKernel"/>
-    </php>
+        <env name="KERNEL_CLASS" value="VysokeSkoly\ImageApi\Kernel"/>
 
+        <server name="APP_ENV" value="test" force="true"/>
+        <server name="SHELL_VERBOSITY" value="-1"/>
+
+        <!-- ###+ symfony/framework-bundle ### -->
+        <env name="APP_ENV" value="dev"/>
+        <env name="APP_SECRET" value="1bebfb8ce6c3a7cb5cccffc34109ec80"/>
+        <!-- ###- symfony/framework-bundle ### -->
+        <!-- ###+ symfony/mailer ### -->
+        <!-- MAILER_DSN=smtp://localhost -->
+        <!-- ###- symfony/mailer ### -->
+    </php>
 </phpunit>
