Fix deb build for newer symfony

--- a/etc/vhosts/vhosts.image-api.conf
+++ b/etc/vhosts/vhosts.image-api.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
     ServerName image-api.vysokeskoly.cz
-    DocumentRoot /srv/www/image-api/web/
+    DocumentRoot /srv/www/image-api/public/
     DirectoryIndex index.php
 
     RewriteEngine On
 
-    <Directory "/srv/www/image-api/web/">
+    <Directory "/srv/www/image-api/public/">
         Require all granted
         # We don't need htaccess. Everything should be here.
         AllowOverride None
@@ -15,7 +15,7 @@
         # If the requested uri does not match to file or matches to directory name, serve index.php instead.
         RewriteCond %{REQUEST_FILENAME} !-f [OR]
         RewriteCond %{REQUEST_FILENAME} -d
-        RewriteRule ^.*$ app.php [NC,L]
+        RewriteRule ^.*$ index.php [NC,L]
     </Directory>
 
     <IfModule mod_deflate.c>
