--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,62 @@
     "license": "proprietary",
     "type": "project",
     "version": "1.4.0",
+    "require": {
+        "php": "^7.4",
+        "beberlei/assert": "^3.2",
+        "consolidation/robo": "^3.0",
+        "doctrine/annotations": "^1.13",
+        "symfony/asset": "^5.4",
+        "symfony/console": "^5.4",
+        "symfony/dotenv": "^5.4",
+        "symfony/expression-language": "^5.4",
+        "symfony/flex": "^1.3.1",
+        "symfony/form": "^5.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-client": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/mailer": "^5.4",
+        "symfony/mime": "^5.4",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/notifier": "^5.4",
+        "symfony/process": "^5.4",
+        "symfony/property-access": "^5.4",
+        "symfony/property-info": "^5.4",
+        "symfony/proxy-manager-bridge": "^5.4",
+        "symfony/security-bundle": "^5.4",
+        "symfony/serializer": "^5.4",
+        "symfony/stopwatch": "^5.2",
+        "symfony/string": "^5.4",
+        "symfony/translation": "^5.4",
+        "symfony/twig-bundle": "^5.2",
+        "symfony/validator": "^5.4",
+        "symfony/web-link": "^5.4",
+        "symfony/web-profiler-bundle": "^5.2",
+        "symfony/yaml": "^5.4",
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0",
+        "vysokeskoly/deb-build": "^5.0"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.28",
+        "mockery/mockery": "^1.4",
+        "php-mock/php-mock-mockery": "^1.3",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-beberlei-assert": "^1.0",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.1",
+        "phpunit/phpunit": "^9.5.20"
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*"
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
     "autoload": {
         "psr-4": {
             "VysokeSkoly\\ImageApi\\": "src"
@@ -14,68 +70,27 @@
             "VysokeSkoly\\ImageApi\\": "tests"
         }
     },
-    "replace": {
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*"
-    },
-    "require": {
-        "php": "^7.4",
-        "beberlei/assert": "^3.2",
-        "doctrine/annotations": "^1.13",
-        "symfony/asset": "5.2.*",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
-        "symfony/expression-language": "5.2.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "5.2.*",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/http-client": "5.2.*",
-        "symfony/intl": "5.2.*",
-        "symfony/mailer": "5.2.*",
-        "symfony/mime": "5.2.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "5.2.*",
-        "symfony/process": "5.2.*",
-        "symfony/property-access": "5.2.*",
-        "symfony/property-info": "5.2.*",
-        "symfony/proxy-manager-bridge": "5.2.*",
-        "symfony/security-bundle": "5.2.*",
-        "symfony/serializer": "5.2.*",
-        "symfony/stopwatch": "^5.2",
-        "symfony/string": "5.2.*",
-        "symfony/translation": "5.2.*",
-        "symfony/twig-bundle": "^5.2",
-        "symfony/validator": "5.2.*",
-        "symfony/web-link": "5.2.*",
-        "symfony/web-profiler-bundle": "^5.2",
-        "symfony/yaml": "5.2.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^3.0",
-        "vysokeskoly/deb-build": "^3.0"
-    },
-    "require-dev": {
-        "mockery/mockery": "^1.4",
-        "php-mock/php-mock-mockery": "^1.3",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^0.12.88",
-        "phpstan/phpstan-beberlei-assert": "^0.12.6",
-        "phpstan/phpstan-mockery": "^0.12.13",
-        "phpstan/phpstan-phpunit": "^0.12.19",
-        "phpunit/phpunit": "^9.5"
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://satis.vysokeskoly.cz/",
-            "canonical": false
-        }
-    ],
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true,
+            "phpstan/extension-installer": true,
+            "ergebnis/composer-normalize": true
         },
+        "bin-dir": "bin",
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "^5.4"
+        }
+    },
+    "scripts": {
         "post-install-cmd": [
             "@installTools",
             "@auto-scripts"
@@ -86,44 +101,41 @@
         ],
         "all": [
             "@analyze",
+            "@phpstan",
             "@test"
         ],
         "analyze": [
             "@cs",
-            "@phpstan"
+            "@lint"
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "cs": [
+            "bin/ecs check --ansi -- src/ tests/"
+        ],
+        "fix": [
+            "@composer normalize",
+            "bin/ecs check --ansi --clear-cache --fix -- src/ tests/"
         ],
         "installTools": [
             "cd tools/coding-standards && composer install && composer link",
             "cd tools/pre-build && composer install && composer link"
         ],
+        "lint": [
+            "@composer validate",
+            "@composer normalize --dry-run",
+            "bin/console lint:twig templates",
+            "bin/console lint:yaml src config templates translations",
+            "bin/parallel-lint -j 10 -e php ./src ./tests ecs.php"
+        ],
+        "phpstan": "bin/phpstan analyze -l 8 -c phpstan.neon src tests",
+        "test": "bin/phpunit -c phpunit.xml.dist",
+        "tests-ci": "mkdir -p code-coverage && php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
         "updateTools": [
             "cd tools/coding-standards && composer update && composer link",
             "cd tools/pre-build && composer update && composer link"
-        ],
-        "test": "bin/phpunit -c phpunit.xml.dist",
-        "tests-ci": "mkdir -p code-coverage && php -dxdebug.coverage_enable=1 bin/phpunit -c phpunit.xml.dist",
-        "phpstan": "bin/phpstan analyze -l 7 -c phpstan.neon src tests",
-        "fix": [
-            "bin/ecs check --ansi --clear-cache --fix -- src/ tests/ ecs.php"
-        ],
-        "cs": "bin/ecs check --ansi -- src/ tests/ ecs.php"
-    },
-    "config": {
-        "bin-dir": "bin",
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true,
-        "secure-http": false
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.2.*"
-        }
+        ]
     }
 }
