--- a/tools/coding-standards/composer.json
+++ b/tools/coding-standards/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "tools/coding-standards",
     "require-dev": {
-        "lmc/coding-standard": "^3.0"
+        "lmc/coding-standard": "^3.3"
     },
     "authors": [
         {
@@ -18,6 +18,9 @@
         "platform": {
             "php": "7.4.18"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
