--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "beberlei/assert": "^3.2",
         "consolidation/robo": "^3.0",
         "doctrine/annotations": "^1.13",
+        "mf/collections-php": "^5.0",
         "symfony/asset": "^5.4",
         "symfony/console": "^5.4",
         "symfony/dotenv": "^5.4",
