--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,8 @@ services:
         resource: '../src/'
         exclude:
             - '../src/Entity/'
+            - '../src/Environment/'
+            - '../src/ValueObject/'
             - '../src/Kernel.php'
 
     # controllers are imported separately to make sure services can be injected
