--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "symfony/yaml": "^5.4",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0",
-        "vysokeskoly/deb-build": "^5.0"
+        "vysokeskoly/deb-build": "^5.0",
+        "vysokeskoly/utils-bundle": "^6.0"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.28",
