Use public deployment docker

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     deployment:
-        image: dcreg.devel:5000/vysokeskoly-php-deployment:7.4
+        image: vysokeskoly/vysokeskoly-php-deployment:7.4
         volumes:
             - ./..:/srv/www/app
             - /srv/www/app/var/cache    # ignore dir in the docker
