Properly use environment variables and .env files

--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ APP_SECRET=1c1f0f6519448063c970e5473474c879
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+API_KEY=api-key
+STORAGE_PATH=var/images
+DEFAULT_NAMESPACE=my-images
