--- a/.github/workflows/release-to-prod.yaml
+++ b/.github/workflows/release-to-prod.yaml
@@ -1,12 +1,12 @@
-name: Release
+name: Release to prod
 
 on:
     push:
-        branches:
-            - main
-            - 'integration/**'
+        #branches:
+        #    - main
+        #    - master
         tags:
-            - '*'
+            - '[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
     checks:
@@ -92,7 +92,7 @@ jobs:
     build:
         runs-on: ubuntu-latest
         name: Build deb package
-        environment: devel
+        environment: prod
         steps:
             # Setup
             -   uses: actions/checkout@v2
@@ -129,7 +129,7 @@ jobs:
             - checks
             - download-deploy-console
             - build
-        environment: devel
+        environment: prod
         steps:
             # Setup
             -   uses: actions/checkout@v2
@@ -180,7 +180,7 @@ jobs:
             # SSH
             -   name: '[SSH] Define IP for private servers'
                 run: |
-                    sudo echo "172.27.129.46  apcdn-2.devel" | sudo tee -a /etc/hosts
+                    sudo echo "172.27.128.46  apcdn-2.prod" | sudo tee -a /etc/hosts
                     sudo echo "172.27.128.47  release.vysokeskoly.cz" | sudo tee -a /etc/hosts
 
             -   name: '[SSH] Prepare ssh key'
@@ -190,9 +190,9 @@ jobs:
                     chmod 700 /home/runner/.ssh/
                     chmod 600 /home/runner/.ssh/id_rsa
 
-            # Release to devel
-            -   name: '[RELEASE] Release deb to devel'
-                run: ./deploy-console.phar d:release devel "Github release - ${{ github.event.pull_request.title }}" -P
+            # Release to prod
+            -   name: '[RELEASE] Release deb to prod'
+                run: ./deploy-console.phar d:release prod "Github release - ${{ github.event.pull_request.title }}" -P
 
             # Notify
             -   name: Slack Notification - success
@@ -203,7 +203,7 @@ jobs:
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: ':rocket: Release successful :white_check_mark:'
-                    SLACK_TITLE: Image Api - Release to devel
+                    SLACK_TITLE: Image Api - Release to prod
                     SLACK_USERNAME: Github Action
                     SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
 
@@ -215,7 +215,7 @@ jobs:
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: ':rocket: Release failed :boom:'
-                    SLACK_TITLE: Image Api - Release to devel
+                    SLACK_TITLE: Image Api - Release to prod
                     SLACK_USERNAME: Github Action
                     SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
 
@@ -225,7 +225,7 @@ jobs:
         needs:
             - selenium-checks
             - release
-        environment: devel
+        environment: prod
         steps:
             # Setup
             -   uses: actions/checkout@v2
@@ -260,16 +260,16 @@ jobs:
             -   name: '[VPN] Check Connection'
                 run: echo ${{ steps.connect_vpn.outputs.STATUS }}
 
-            # Run devel selenium tests
+            # Run prod selenium tests
             -   name: '[SELENIUM] Start server'
                 working-directory: ./selenium-tests
                 run: bin/selenium-server-start
 
-            -   name: '[SELENIUM] Run all devel tests'
+            -   name: '[SELENIUM] Run all prod tests'
                 working-directory: ./selenium-tests
                 env:
                     API_KEY: ${{ secrets.IMAGE_API_APIKEY }}
-                run: ./vendor/bin/steward run -vv dev chrome
+                run: ./vendor/bin/steward run -vv --group=prod-safe prod chrome
 
             -   name: '[SELENIUM] Stop server'
                 if: success() || failure()
@@ -280,7 +280,7 @@ jobs:
                 if: success() || failure()
                 uses: actions/upload-artifact@v3
                 with:
-                    name: selenium-devel-result.xml
+                    name: selenium-results.xml
                     path: './selenium-tests/logs/results.xml'
 
             # Notify
@@ -292,7 +292,7 @@ jobs:
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: 'Selenium tests are successful :white_check_mark:'
-                    SLACK_TITLE: Image Api - Selenium tests on devel
+                    SLACK_TITLE: Image Api - Selenium tests on prod
                     SLACK_USERNAME: Github Action
                     SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
 
@@ -304,6 +304,6 @@ jobs:
                     SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
                     #SLACK_ICON: https://github.com/rtCamp.png?size=48
                     SLACK_MESSAGE: 'Selenium tests have failed :boom:'
-                    SLACK_TITLE: Image Api - Selenium tests on devel
+                    SLACK_TITLE: Image Api - Selenium tests on prod
                     SLACK_USERNAME: Github Action
                     SLACK_WEBHOOK: ${{ secrets.SLACK_RELEASE_WEBHOOK }}
