--- a/.github/workflows/release-to-prod.yaml
+++ b/.github/workflows/release-to-prod.yaml
@@ -30,8 +30,8 @@ jobs:
                 run: composer install
 
             # Check application
-            -   name: '[CHECK] codestyle'
-                run: composer cs
+            -   name: '[CHECK] analyze'
+                run: composer analyze
 
             -   name: '[CHECK] phpstan'
                 run: composer phpstan
