--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "version": "2.0.0",
     "require": {
         "php": "^8.1",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
         "beberlei/assert": "^3.2",
         "consolidation/robo": "^3.0",
         "doctrine/annotations": "^1.13",
