--- a/.github/workflows/release-to-devel.yaml
+++ b/.github/workflows/release-to-devel.yaml
@@ -112,6 +112,9 @@ jobs:
             # Build
             -   name: '[BUILD] Build deb package'
                 run: bin/build-deb-app
+                shell: bash
+                env:
+                    BUILD_NUMBER: ${{ github.run_id }}
 
             -   name: '[ARTIFACT] Upload a deploy-console'
                 uses: actions/upload-artifact@v3
