--- a/.github/workflows/release-to-prod.yaml
+++ b/.github/workflows/release-to-prod.yaml
@@ -115,6 +115,9 @@ jobs:
             # Build
             -   name: '[BUILD] Build deb package'
                 run: bin/build-deb-app
+                env:
+                    BUILD_NUMBER: ${{ github.run_id }}
+                    BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
             -   name: '[ARTIFACT] Upload a deploy-console'
                 uses: actions/upload-artifact@v3
