fixup! Use github action job as a build number

--- a/.github/workflows/release-to-devel.yaml
+++ b/.github/workflows/release-to-devel.yaml
@@ -114,6 +114,7 @@ jobs:
                 run: bin/build-deb-app
                 env:
                     BUILD_NUMBER: ${{ github.run_id }}
+                    BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
             -   name: '[ARTIFACT] Upload a deploy-console'
                 uses: actions/upload-artifact@v3
