--- a/.github/workflows/php-checks.yaml
+++ b/.github/workflows/php-checks.yaml
@@ -1,7 +1,9 @@
 name: PHP - Checks
 
 on:
-    #push:
+    push:
+        - master
+        - main
     pull_request:
     schedule:
         -   cron:  '0 3 * * *'
