--- a/.github/workflows/release-to-prod.yaml
+++ b/.github/workflows/release-to-prod.yaml
@@ -195,7 +195,7 @@ jobs:
 
             # Release to prod
             -   name: '[RELEASE] Release deb to prod'
-                run: ./deploy-console.phar d:release prod "Github release - ${{ github.event.pull_request.title }}" -P
+                run: ./deploy-console.phar d:release prod "Github release - ${{ github.event_name }}" -P
 
             # Notify
             -   name: Slack Notification - success
