--- a/.github/workflows/release-to-prod.yaml
+++ b/.github/workflows/release-to-prod.yaml
@@ -195,7 +195,8 @@ jobs:
 
             # Release to prod
             -   name: '[RELEASE] Release deb to prod'
-                run: ./deploy-console.phar d:release prod "Github release - ${{ github.ref_name }}" -P
+                run: |
+                    ./deploy-console.phar d:release prod "Github release - ${{ github.ref_type }}: ${{ github.ref_name }}" -P
 
             # Notify
             -   name: Slack Notification - success
